# erode

./: .gitignore  CMakeLists.txt  MyLexer.cpp  README.md  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  parser_helper.h  token.h
ast/: expression.h  function.h  item.h  node.h  program.h  statement.h
codegen/: codegen.cpp  codegen.h
lexer/: lexer.cpp  lexer.h
parser/: parser.cpp  parser.h  parser_helper.h
semantics/: scope.h  semantic_analyzer.cpp  semantic_analyzer.h
token/: token.h
